feat(model-service): 优化LSTM模型训练流程与数据处理 - 调整LstmTrainerService, LstmDataPreprocessor, 和 LstmInference - 增加模型和归一化参数的持久化 - 更新ApplicationStartupListener以适应新的模型加载逻辑